parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Pgm
Rule 1     Pgm -> Declstar
Rule 2     Declstar -> empty
Rule 3     Declstar -> Decl Declstar
Rule 4     empty -> <empty>
Rule 5     Decl -> VarDecl
Rule 6     Decl -> FunDecl
Rule 7     Decl -> ClassDecl
Rule 8     VarDecl -> Type VarList SEMICOLON
Rule 9     FunDecl -> Type Var LPAREN FormalsQ RPAREN Stmt
Rule 10    ClassDecl -> CLASS class_name ExtendsQ LCURLY MemberDeclstar RCURLY
Rule 11    class_name -> animal
Rule 12    class_name -> dog
Rule 13    ExtendsQ -> empty
Rule 14    ExtendsQ -> Extends
Rule 15    Extends -> EXTENDS class_name
Rule 16    MemberDeclstar -> empty
Rule 17    MemberDeclstar -> MemberDecl MemberDeclstar
Rule 18    MemberDecl -> VarDecl
Rule 19    MemberDecl -> FunDecl
Rule 20    FormalsQ -> empty
Rule 21    FormalsQ -> Formals
Rule 22    VarDeclstar -> empty
Rule 23    VarDeclstar -> VarDecl VarDeclstar
Rule 24    Type -> INT
Rule 25    Type -> BOOL
Rule 26    Type -> VOID
Rule 27    Type -> Type LSQR RSQR
Rule 28    Type -> animal
Rule 29    Type -> dog
Rule 30    VarList -> Var COMMA VarList
Rule 31    VarList -> Var
Rule 32    Var -> IDENTIFIER Dimstar
Rule 33    Formals -> Type Var COMMA Formals
Rule 34    Formals -> Type Var
Rule 35    Stmtstar -> empty
Rule 36    Stmtstar -> Stmt Stmtstar
Rule 37    Stmt -> SE SEMICOLON
Rule 38    Stmt -> Print
Rule 39    Stmt -> Block
Rule 40    Stmt -> If
Rule 41    Stmt -> While
Rule 42    Stmt -> for
Rule 43    Stmt -> Do_while
Rule 44    Stmt -> Return
Rule 45    SE -> Assign
Rule 46    SE -> MethodCall
Rule 47    Assign -> Lhs EQUALS AE
Rule 48    Assign -> Lhs Inc
Rule 49    Assign -> Lhs Dec
Rule 50    Assign -> Inc Lhs
Rule 51    Assign -> Dec Lhs
Rule 52    Dec -> DEC
Rule 53    Inc -> INC
Rule 54    Print -> PRINT LPAREN AE RPAREN SEMICOLON
Rule 55    Block -> LCURLY VarDeclstar Stmtstar RCURLY
Rule 56    If -> IF AE THEN Stmt
Rule 57    If -> IF AE THEN Stmt ELSE Stmt
Rule 58    While -> WHILE AE DO Stmt
Rule 59    Do_while -> DO Stmt WHILE AE SEMICOLON
Rule 60    for -> FOR LPAREN SEQ SEMICOLON AEQ SEMICOLON SEQ RPAREN Stmt
Rule 61    SEQ -> empty
Rule 62    SEQ -> SE
Rule 63    AEQ -> empty
Rule 64    AEQ -> AE
Rule 65    Return -> RETURN AEQ SEMICOLON
Rule 66    Lhs -> FieldAccess
Rule 67    Lhs -> ArrayAccess
Rule 68    AE -> AE TIMES AE
Rule 69    AE -> AE SLASH AE
Rule 70    AE -> AE PLUS AE
Rule 71    AE -> AE MINUS AE
Rule 72    AE -> AE LT AE
Rule 73    AE -> AE EQ AE
Rule 74    AE -> AE GT AE
Rule 75    AE -> AE GTEQ AE
Rule 76    AE -> AE LTEQ AE
Rule 77    AE -> AE NEQ AE
Rule 78    AE -> AE LAND AE
Rule 79    AE -> AE LOR AE
Rule 80    AE -> AE MOD AE
Rule 81    AE -> MINUS AE
Rule 82    AE -> NOT AE
Rule 83    AE -> Primary
Rule 84    AE -> SE
Rule 85    AE -> NewArray
Rule 86    Primary -> intconst
Rule 87    Primary -> true
Rule 88    Primary -> false
Rule 89    Primary -> this
Rule 90    Primary -> super
Rule 91    Primary -> Input
Rule 92    Primary -> LPAREN AE RPAREN
Rule 93    Primary -> FieldAccess
Rule 94    Primary -> ArrayAccess
Rule 95    Primary -> NewObject
Rule 96    intconst -> NUMBER
Rule 97    true -> TRUE
Rule 98    false -> FALSE
Rule 99    this -> THIS
Rule 100   super -> SUPER
Rule 101   Input -> INPUT LPAREN RPAREN
Rule 102   ArrayAccess -> Primary LSQR AE RSQR
Rule 103   FieldAccess -> Primary DOT IDENTIFIER
Rule 104   FieldAccess -> IDENTIFIER
Rule 105   MethodCall -> FieldAccess LPAREN ArgsQ RPAREN
Rule 106   ArgsQ -> empty
Rule 107   ArgsQ -> Args
Rule 108   Args -> AE COMMA Args
Rule 109   Args -> AE
Rule 110   NewObject -> NEW animal LPAREN RPAREN
Rule 111   NewObject -> NEW dog LPAREN RPAREN
Rule 112   NewArray -> NEW Type DimExpr Dimstar
Rule 113   DimExpr -> LSQR AE RSQR
Rule 114   Dimstar -> empty
Rule 115   Dimstar -> Dim Dimstar
Rule 116   Dim -> LSQR RSQR

Terminals, with rules where they appear

BOOL                 : 25
CLASS                : 10
COMMA                : 30 33 108
DEC                  : 52
DO                   : 58 59
DOT                  : 103
ELSE                 : 57
EQ                   : 73
EQUALS               : 47
EXTENDS              : 15
FALSE                : 98
FOR                  : 60
GT                   : 74
GTEQ                 : 75
IDENTIFIER           : 32 103 104
IF                   : 56 57
INC                  : 53
INPUT                : 101
INT                  : 24
LAND                 : 78
LCURLY               : 10 55
LOR                  : 79
LPAREN               : 9 54 60 92 101 105 110 111
LSQR                 : 27 102 113 116
LT                   : 72
LTEQ                 : 76
MINUS                : 71 81
MOD                  : 80
NEQ                  : 77
NEW                  : 110 111 112
NOT                  : 82
NUMBER               : 96
PLUS                 : 70
PRINT                : 54
RCURLY               : 10 55
RETURN               : 65
RPAREN               : 9 54 60 92 101 105 110 111
RSQR                 : 27 102 113 116
SEMICOLON            : 8 37 54 59 60 60 65
SLASH                : 69
SUPER                : 100
THEN                 : 56 57
THIS                 : 99
TIMES                : 68
TRUE                 : 97
VOID                 : 26
WHILE                : 58 59
animal               : 11 28 110
dog                  : 12 29 111
error                : 

Nonterminals, with rules where they appear

AE                   : 47 54 56 57 58 59 64 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 82 92 102 108 109 113
AEQ                  : 60 65
Args                 : 107 108
ArgsQ                : 105
ArrayAccess          : 67 94
Assign               : 45
Block                : 39
ClassDecl            : 7
Dec                  : 49 51
Decl                 : 3
Declstar             : 1 3
Dim                  : 115
DimExpr              : 112
Dimstar              : 32 112 115
Do_while             : 43
Extends              : 14
ExtendsQ             : 10
FieldAccess          : 66 93 105
Formals              : 21 33
FormalsQ             : 9
FunDecl              : 6 19
If                   : 40
Inc                  : 48 50
Input                : 91
Lhs                  : 47 48 49 50 51
MemberDecl           : 17
MemberDeclstar       : 10 17
MethodCall           : 46
NewArray             : 85
NewObject            : 95
Pgm                  : 0
Primary              : 83 102 103
Print                : 38
Return               : 44
SE                   : 37 62 84
SEQ                  : 60 60
Stmt                 : 9 36 56 57 57 58 59 60
Stmtstar             : 36 55
Type                 : 8 9 27 33 34 112
Var                  : 9 30 31 33 34
VarDecl              : 5 18 23
VarDeclstar          : 23 55
VarList              : 8 30
While                : 41
class_name           : 10 15
empty                : 2 13 16 20 22 35 61 63 106 114
false                : 88
for                  : 42
intconst             : 86
super                : 90
this                 : 89
true                 : 87

Parsing method: LALR

state 0

    (0) S' -> . Pgm
    (1) Pgm -> . Declstar
    (2) Declstar -> . empty
    (3) Declstar -> . Decl Declstar
    (4) empty -> .
    (5) Decl -> . VarDecl
    (6) Decl -> . FunDecl
    (7) Decl -> . ClassDecl
    (8) VarDecl -> . Type VarList SEMICOLON
    (9) FunDecl -> . Type Var LPAREN FormalsQ RPAREN Stmt
    (10) ClassDecl -> . CLASS class_name ExtendsQ LCURLY MemberDeclstar RCURLY
    (24) Type -> . INT
    (25) Type -> . BOOL
    (26) Type -> . VOID
    (27) Type -> . Type LSQR RSQR
    (28) Type -> . animal
    (29) Type -> . dog

    $end            reduce using rule 4 (empty -> .)
    CLASS           shift and go to state 7
    INT             shift and go to state 13
    BOOL            shift and go to state 6
    VOID            shift and go to state 1
    animal          shift and go to state 5
    dog             shift and go to state 12

    Decl                           shift and go to state 9
    ClassDecl                      shift and go to state 3
    FunDecl                        shift and go to state 4
    Pgm                            shift and go to state 10
    VarDecl                        shift and go to state 11
    Declstar                       shift and go to state 14
    Type                           shift and go to state 2
    empty                          shift and go to state 8

state 1

    (26) Type -> VOID .

    LSQR            reduce using rule 26 (Type -> VOID .)
    IDENTIFIER      reduce using rule 26 (Type -> VOID .)


state 2

    (8) VarDecl -> Type . VarList SEMICOLON
    (9) FunDecl -> Type . Var LPAREN FormalsQ RPAREN Stmt
    (27) Type -> Type . LSQR RSQR
    (30) VarList -> . Var COMMA VarList
    (31) VarList -> . Var
    (32) Var -> . IDENTIFIER Dimstar

    LSQR            shift and go to state 16
    IDENTIFIER      shift and go to state 18

    VarList                        shift and go to state 15
    Var                            shift and go to state 17

state 3

    (7) Decl -> ClassDecl .

    CLASS           reduce using rule 7 (Decl -> ClassDecl .)
    INT             reduce using rule 7 (Decl -> ClassDecl .)
    BOOL            reduce using rule 7 (Decl -> ClassDecl .)
    VOID            reduce using rule 7 (Decl -> ClassDecl .)
    animal          reduce using rule 7 (Decl -> ClassDecl .)
    dog             reduce using rule 7 (Decl -> ClassDecl .)
    $end            reduce using rule 7 (Decl -> ClassDecl .)


state 4

    (6) Decl -> FunDecl .

    CLASS           reduce using rule 6 (Decl -> FunDecl .)
    INT             reduce using rule 6 (Decl -> FunDecl .)
    BOOL            reduce using rule 6 (Decl -> FunDecl .)
    VOID            reduce using rule 6 (Decl -> FunDecl .)
    animal          reduce using rule 6 (Decl -> FunDecl .)
    dog             reduce using rule 6 (Decl -> FunDecl .)
    $end            reduce using rule 6 (Decl -> FunDecl .)


state 5

    (28) Type -> animal .

    LSQR            reduce using rule 28 (Type -> animal .)
    IDENTIFIER      reduce using rule 28 (Type -> animal .)


state 6

    (25) Type -> BOOL .

    LSQR            reduce using rule 25 (Type -> BOOL .)
    IDENTIFIER      reduce using rule 25 (Type -> BOOL .)


state 7

    (10) ClassDecl -> CLASS . class_name ExtendsQ LCURLY MemberDeclstar RCURLY
    (11) class_name -> . animal
    (12) class_name -> . dog

    animal          shift and go to state 21
    dog             shift and go to state 20

    class_name                     shift and go to state 19

state 8

    (2) Declstar -> empty .

    $end            reduce using rule 2 (Declstar -> empty .)


state 9

    (3) Declstar -> Decl . Declstar
    (2) Declstar -> . empty
    (3) Declstar -> . Decl Declstar
    (4) empty -> .
    (5) Decl -> . VarDecl
    (6) Decl -> . FunDecl
    (7) Decl -> . ClassDecl
    (8) VarDecl -> . Type VarList SEMICOLON
    (9) FunDecl -> . Type Var LPAREN FormalsQ RPAREN Stmt
    (10) ClassDecl -> . CLASS class_name ExtendsQ LCURLY MemberDeclstar RCURLY
    (24) Type -> . INT
    (25) Type -> . BOOL
    (26) Type -> . VOID
    (27) Type -> . Type LSQR RSQR
    (28) Type -> . animal
    (29) Type -> . dog

    $end            reduce using rule 4 (empty -> .)
    CLASS           shift and go to state 7
    INT             shift and go to state 13
    BOOL            shift and go to state 6
    VOID            shift and go to state 1
    animal          shift and go to state 5
    dog             shift and go to state 12

    Decl                           shift and go to state 9
    ClassDecl                      shift and go to state 3
    FunDecl                        shift and go to state 4
    VarDecl                        shift and go to state 11
    Declstar                       shift and go to state 22
    Type                           shift and go to state 2
    empty                          shift and go to state 8

state 10

    (0) S' -> Pgm .



state 11

    (5) Decl -> VarDecl .

    CLASS           reduce using rule 5 (Decl -> VarDecl .)
    INT             reduce using rule 5 (Decl -> VarDecl .)
    BOOL            reduce using rule 5 (Decl -> VarDecl .)
    VOID            reduce using rule 5 (Decl -> VarDecl .)
    animal          reduce using rule 5 (Decl -> VarDecl .)
    dog             reduce using rule 5 (Decl -> VarDecl .)
    $end            reduce using rule 5 (Decl -> VarDecl .)


state 12

    (29) Type -> dog .

    LSQR            reduce using rule 29 (Type -> dog .)
    IDENTIFIER      reduce using rule 29 (Type -> dog .)


state 13

    (24) Type -> INT .

    LSQR            reduce using rule 24 (Type -> INT .)
    IDENTIFIER      reduce using rule 24 (Type -> INT .)


state 14

    (1) Pgm -> Declstar .

    $end            reduce using rule 1 (Pgm -> Declstar .)


state 15

    (8) VarDecl -> Type VarList . SEMICOLON

    SEMICOLON       shift and go to state 23


state 16

    (27) Type -> Type LSQR . RSQR

    RSQR            shift and go to state 24


state 17

    (9) FunDecl -> Type Var . LPAREN FormalsQ RPAREN Stmt
    (30) VarList -> Var . COMMA VarList
    (31) VarList -> Var .

    LPAREN          shift and go to state 26
    COMMA           shift and go to state 25
    SEMICOLON       reduce using rule 31 (VarList -> Var .)


state 18

    (32) Var -> IDENTIFIER . Dimstar
    (114) Dimstar -> . empty
    (115) Dimstar -> . Dim Dimstar
    (4) empty -> .
    (116) Dim -> . LSQR RSQR

    LPAREN          reduce using rule 4 (empty -> .)
    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)
    RPAREN          reduce using rule 4 (empty -> .)
    LSQR            shift and go to state 28

    Dim                            shift and go to state 27
    Dimstar                        shift and go to state 29
    empty                          shift and go to state 30

state 19

    (10) ClassDecl -> CLASS class_name . ExtendsQ LCURLY MemberDeclstar RCURLY
    (13) ExtendsQ -> . empty
    (14) ExtendsQ -> . Extends
    (4) empty -> .
    (15) Extends -> . EXTENDS class_name

    LCURLY          reduce using rule 4 (empty -> .)
    EXTENDS         shift and go to state 33

    ExtendsQ                       shift and go to state 31
    Extends                        shift and go to state 32
    empty                          shift and go to state 34

state 20

    (12) class_name -> dog .

    EXTENDS         reduce using rule 12 (class_name -> dog .)
    LCURLY          reduce using rule 12 (class_name -> dog .)


state 21

    (11) class_name -> animal .

    EXTENDS         reduce using rule 11 (class_name -> animal .)
    LCURLY          reduce using rule 11 (class_name -> animal .)


state 22

    (3) Declstar -> Decl Declstar .

    $end            reduce using rule 3 (Declstar -> Decl Declstar .)


state 23

    (8) VarDecl -> Type VarList SEMICOLON .

    INT             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    BOOL            reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    VOID            reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    animal          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    dog             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    PRINT           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    LCURLY          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    IF              reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    WHILE           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    FOR             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    DO              reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    RETURN          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    INC             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    DEC             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    IDENTIFIER      reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    LPAREN          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    NUMBER          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    TRUE            reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    FALSE           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    THIS            reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    SUPER           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    INPUT           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    NEW             reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    RCURLY          reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    CLASS           reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)
    $end            reduce using rule 8 (VarDecl -> Type VarList SEMICOLON .)


state 24

    (27) Type -> Type LSQR RSQR .

    LSQR            reduce using rule 27 (Type -> Type LSQR RSQR .)
    IDENTIFIER      reduce using rule 27 (Type -> Type LSQR RSQR .)


state 25

    (30) VarList -> Var COMMA . VarList
    (30) VarList -> . Var COMMA VarList
    (31) VarList -> . Var
    (32) Var -> . IDENTIFIER Dimstar

    IDENTIFIER      shift and go to state 18

    Var                            shift and go to state 35
    VarList                        shift and go to state 36

state 26

    (9) FunDecl -> Type Var LPAREN . FormalsQ RPAREN Stmt
    (20) FormalsQ -> . empty
    (21) FormalsQ -> . Formals
    (4) empty -> .
    (33) Formals -> . Type Var COMMA Formals
    (34) Formals -> . Type Var
    (24) Type -> . INT
    (25) Type -> . BOOL
    (26) Type -> . VOID
    (27) Type -> . Type LSQR RSQR
    (28) Type -> . animal
    (29) Type -> . dog

    RPAREN          reduce using rule 4 (empty -> .)
    INT             shift and go to state 13
    BOOL            shift and go to state 6
    VOID            shift and go to state 1
    animal          shift and go to state 5
    dog             shift and go to state 12

    FormalsQ                       shift and go to state 37
    Type                           shift and go to state 38
    empty                          shift and go to state 39
    Formals                        shift and go to state 40

state 27

    (115) Dimstar -> Dim . Dimstar
    (114) Dimstar -> . empty
    (115) Dimstar -> . Dim Dimstar
    (4) empty -> .
    (116) Dim -> . LSQR RSQR

    LPAREN          reduce using rule 4 (empty -> .)
    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)
    RPAREN          reduce using rule 4 (empty -> .)
    TIMES           reduce using rule 4 (empty -> .)
    SLASH           reduce using rule 4 (empty -> .)
    PLUS            reduce using rule 4 (empty -> .)
    MINUS           reduce using rule 4 (empty -> .)
    LT              reduce using rule 4 (empty -> .)
    EQ              reduce using rule 4 (empty -> .)
    GT              reduce using rule 4 (empty -> .)
    GTEQ            reduce using rule 4 (empty -> .)
    LTEQ            reduce using rule 4 (empty -> .)
    NEQ             reduce using rule 4 (empty -> .)
    LAND            reduce using rule 4 (empty -> .)
    LOR             reduce using rule 4 (empty -> .)
    MOD             reduce using rule 4 (empty -> .)
    DO              reduce using rule 4 (empty -> .)
    THEN            reduce using rule 4 (empty -> .)
    RSQR            reduce using rule 4 (empty -> .)
    LSQR            shift and go to state 28

    Dim                            shift and go to state 27
    Dimstar                        shift and go to state 41
    empty                          shift and go to state 30

state 28

    (116) Dim -> LSQR . RSQR

    RSQR            shift and go to state 42


state 29

    (32) Var -> IDENTIFIER Dimstar .

    COMMA           reduce using rule 32 (Var -> IDENTIFIER Dimstar .)
    SEMICOLON       reduce using rule 32 (Var -> IDENTIFIER Dimstar .)
    RPAREN          reduce using rule 32 (Var -> IDENTIFIER Dimstar .)
    LPAREN          reduce using rule 32 (Var -> IDENTIFIER Dimstar .)


state 30

    (114) Dimstar -> empty .

    LPAREN          reduce using rule 114 (Dimstar -> empty .)
    COMMA           reduce using rule 114 (Dimstar -> empty .)
    SEMICOLON       reduce using rule 114 (Dimstar -> empty .)
    RPAREN          reduce using rule 114 (Dimstar -> empty .)
    TIMES           reduce using rule 114 (Dimstar -> empty .)
    SLASH           reduce using rule 114 (Dimstar -> empty .)
    PLUS            reduce using rule 114 (Dimstar -> empty .)
    MINUS           reduce using rule 114 (Dimstar -> empty .)
    LT              reduce using rule 114 (Dimstar -> empty .)
    EQ              reduce using rule 114 (Dimstar -> empty .)
    GT              reduce using rule 114 (Dimstar -> empty .)
    GTEQ            reduce using rule 114 (Dimstar -> empty .)
    LTEQ            reduce using rule 114 (Dimstar -> empty .)
    NEQ             reduce using rule 114 (Dimstar -> empty .)
    LAND            reduce using rule 114 (Dimstar -> empty .)
    LOR             reduce using rule 114 (Dimstar -> empty .)
    MOD             reduce using rule 114 (Dimstar -> empty .)
    DO              reduce using rule 114 (Dimstar -> empty .)
    THEN            reduce using rule 114 (Dimstar -> empty .)
    RSQR            reduce using rule 114 (Dimstar -> empty .)


state 31

    (10) ClassDecl -> CLASS class_name ExtendsQ . LCURLY MemberDeclstar RCURLY

    LCURLY          shift and go to state 43


state 32

    (14) ExtendsQ -> Extends .

    LCURLY          reduce using rule 14 (ExtendsQ -> Extends .)


state 33

    (15) Extends -> EXTENDS . class_name
    (11) class_name -> . animal
    (12) class_name -> . dog

    animal          shift and go to state 21
    dog             shift and go to state 20

    class_name                     shift and go to state 44

state 34

    (13) ExtendsQ -> empty .

    LCURLY          reduce using rule 13 (ExtendsQ -> empty .)


state 35

    (30) VarList -> Var . COMMA VarList
    (31) VarList -> Var .

    COMMA           shift and go to state 25
    SEMICOLON       reduce using rule 31 (VarList -> Var .)


state 36

    (30) VarList -> Var COMMA VarList .

    SEMICOLON       reduce using rule 30 (VarList -> Var COMMA VarList .)


state 37

    (9) FunDecl -> Type Var LPAREN FormalsQ . RPAREN Stmt

    RPAREN          shift and go to state 45


state 38

    (33) Formals -> Type . Var COMMA Formals
    (34) Formals -> Type . Var
    (27) Type -> Type . LSQR RSQR
    (32) Var -> . IDENTIFIER Dimstar

    LSQR            shift and go to state 16
    IDENTIFIER      shift and go to state 18

    Var                            shift and go to state 46

state 39

    (20) FormalsQ -> empty .

    RPAREN          reduce using rule 20 (FormalsQ -> empty .)


state 40

    (21) FormalsQ -> Formals .

    RPAREN          reduce using rule 21 (FormalsQ -> Formals .)


state 41

    (115) Dimstar -> Dim Dimstar .

    LPAREN          reduce using rule 115 (Dimstar -> Dim Dimstar .)
    COMMA           reduce using rule 115 (Dimstar -> Dim Dimstar .)
    SEMICOLON       reduce using rule 115 (Dimstar -> Dim Dimstar .)
    RPAREN          reduce using rule 115 (Dimstar -> Dim Dimstar .)
    TIMES           reduce using rule 115 (Dimstar -> Dim Dimstar .)
    SLASH           reduce using rule 115 (Dimstar -> Dim Dimstar .)
    PLUS            reduce using rule 115 (Dimstar -> Dim Dimstar .)
    MINUS           reduce using rule 115 (Dimstar -> Dim Dimstar .)
    LT              reduce using rule 115 (Dimstar -> Dim Dimstar .)
    EQ              reduce using rule 115 (Dimstar -> Dim Dimstar .)
    GT              reduce using rule 115 (Dimstar -> Dim Dimstar .)
    GTEQ            reduce using rule 115 (Dimstar -> Dim Dimstar .)
    LTEQ            reduce using rule 115 (Dimstar -> Dim Dimstar .)
    NEQ             reduce using rule 115 (Dimstar -> Dim Dimstar .)
    LAND            reduce using rule 115 (Dimstar -> Dim Dimstar .)
    LOR             reduce using rule 115 (Dimstar -> Dim Dimstar .)
    MOD             reduce using rule 115 (Dimstar -> Dim Dimstar .)
    DO              reduce using rule 115 (Dimstar -> Dim Dimstar .)
    THEN            reduce using rule 115 (Dimstar -> Dim Dimstar .)
    RSQR            reduce using rule 115 (Dimstar -> Dim Dimstar .)


state 42

    (116) Dim -> LSQR RSQR .

    LSQR            reduce using rule 116 (Dim -> LSQR RSQR .)
    LPAREN          reduce using rule 116 (Dim -> LSQR RSQR .)
    COMMA           reduce using rule 116 (Dim -> LSQR RSQR .)
    SEMICOLON       reduce using rule 116 (Dim -> LSQR RSQR .)
    RPAREN          reduce using rule 116 (Dim -> LSQR RSQR .)
    TIMES           reduce using rule 116 (Dim -> LSQR RSQR .)
    SLASH           reduce using rule 116 (Dim -> LSQR RSQR .)
    PLUS            reduce using rule 116 (Dim -> LSQR RSQR .)
    MINUS           reduce using rule 116 (Dim -> LSQR RSQR .)
    LT              reduce using rule 116 (Dim -> LSQR RSQR .)
    EQ              reduce using rule 116 (Dim -> LSQR RSQR .)
    GT              reduce using rule 116 (Dim -> LSQR RSQR .)
    GTEQ            reduce using rule 116 (Dim -> LSQR RSQR .)
    LTEQ            reduce using rule 116 (Dim -> LSQR RSQR .)
    NEQ             reduce using rule 116 (Dim -> LSQR RSQR .)
    LAND            reduce using rule 116 (Dim -> LSQR RSQR .)
    LOR             reduce using rule 116 (Dim -> LSQR RSQR .)
    MOD             reduce using rule 116 (Dim -> LSQR RSQR .)
    DO              reduce using rule 116 (Dim -> LSQR RSQR .)
    THEN            reduce using rule 116 (Dim -> LSQR RSQR .)
    RSQR            reduce using rule 116 (Dim -> LSQR RSQR .)


state 43

    (10) ClassDecl -> CLASS class_name ExtendsQ LCURLY . MemberDeclstar RCURLY
    (16) MemberDeclstar -> . empty
    (17) MemberDeclstar -> . MemberDecl MemberDeclstar
    (4) empty -> .
    (18) MemberDecl -> . VarDecl
    (19) MemberDecl -> . FunDecl
    (8) VarDecl -> . Type VarList SEMICOLON
    (9) FunDecl -> . Type Var LPAREN FormalsQ RPAREN Stmt
    (24) Type -> . INT
    (25) Type -> . BOOL
    (26) Type -> . VOID
    (27) Type -> . Type LSQR RSQR
    (28) Type -> . animal
    (29) Type -> . dog

    RCURLY          reduce using rule 4 (empty -> .)
    INT             shift and go to state 13
    BOOL            shift and go to state 6
    VOID            shift and go to state 1
    animal          shift and go to state 5
    dog             shift and go to state 12

    FunDecl                        shift and go to state 47
    VarDecl                        shift and go to state 51
    MemberDecl                     shift and go to state 48
    MemberDeclstar                 shift and go to state 49
    Type                           shift and go to state 2
    empty                          shift and go to state 50

state 44

    (15) Extends -> EXTENDS class_name .

    LCURLY          reduce using rule 15 (Extends -> EXTENDS class_name .)


state 45

    (9) FunDecl -> Type Var LPAREN FormalsQ RPAREN . Stmt
    (37) Stmt -> . SE SEMICOLON
    (38) Stmt -> . Print
    (39) Stmt -> . Block
    (40) Stmt -> . If
    (41) Stmt -> . While
    (42) Stmt -> . for
    (43) Stmt -> . Do_while
    (44) Stmt -> . Return
    (45) SE -> . Assign
    (46) SE -> . MethodCall
    (54) Print -> . PRINT LPAREN AE RPAREN SEMICOLON
    (55) Block -> . LCURLY VarDeclstar Stmtstar RCURLY
    (56) If -> . IF AE THEN Stmt
    (57) If -> . IF AE THEN Stmt ELSE Stmt
    (58) While -> . WHILE AE DO Stmt
    (60) for -> . FOR LPAREN SEQ SEMICOLON AEQ SEMICOLON SEQ RPAREN Stmt
    (59) Do_while -> . DO Stmt WHILE AE SEMICOLON
    (65) Return -> . RETURN AEQ SEMICOLON
    (47) Assign -> . Lhs EQUALS AE
    (48) Assign -> . Lhs Inc
    (49) Assign -> . Lhs Dec
    (50) Assign -> . Inc Lhs
    (51) Assign -> . Dec Lhs
    (105) MethodCall -> . FieldAccess LPAREN ArgsQ RPAREN
    (66) Lhs -> . FieldAccess
    (67) Lhs -> . ArrayAccess
    (53) Inc -> . INC
    (52) Dec -> . DEC
    (103) FieldAccess -> . Primary DOT IDENTIFIER
    (104) FieldAccess -> . IDENTIFIER
    (102) ArrayAccess -> . Primary LSQR AE RSQR
    (86) Primary -> . intconst
    (87) Primary -> . true
    (88) Primary -> . false
    (89) Primary -> . this
    (90) Primary -> . super
    (91) Primary -> . Input
    (92) Primary -> . LPAREN AE RPAREN
    (93) Primary -> . FieldAccess
    (94) Primary -> . ArrayAccess
    (95) Primary -> . NewObject
    (96) intconst -> . NUMBER
    (97) true -> . TRUE
    (98) false -> . FALSE
    (99) this -> . THIS
    (100) super -> . SUPER
    (101) Input -> . INPUT LPAREN RPAREN
    (110) NewObject -> . NEW animal LPAREN RPAREN
    (111) NewObject -> . NEW dog LPAREN RPAREN

    PRINT           shift and go to state 54
    LCURLY          shift and go to state 56
    IF              shift and go to state 82
    WHILE           shift and go to state 57
    FOR             shift and go to state 70
    DO              shift and go to state 53
    RETURN          shift and go to state 52
    INC             shift and go to state 68
    DEC             shift and go to state 62
    IDENTIFIER      shift and go to state 69
    LPAREN          shift and go to state 74
    NUMBER          shift and go to state 55
    TRUE            shift and go to state 89
    FALSE           shift and go to state 83
    THIS            shift and go to state 87
    SUPER           shift and go to state 91
    INPUT           shift and go to state 61
    NEW             shift and go to state 64

    false                          shift and go to state 71
    Do_while                       shift and go to state 58
    Input                          shift and go to state 59
    Print                          shift and go to state 60
    MethodCall                     shift and go to state 63
    Return                         shift and go to state 76
    super                          shift and go to state 66
    Stmt                           shift and go to state 67
    While                          shift and go to state 72
    Lhs                            shift and go to state 73
    intconst                       shift and go to state 75
    ArrayAccess                    shift and go to state 77
    Dec                            shift and go to state 78
    true                           shift and go to state 79
    Assign                         shift and go to state 80
    Block                          shift and go to state 81
    for                            shift and go to state 65
    this                           shift and go to state 84
    FieldAccess                    shift and go to state 85
    Primary                        shift and go to state 86
    NewObject                      shift and go to state 88
    If                             shift and go to state 93
    SE                             shift and go to state 92
    Inc                            shift and go to state 90

state 46

    (33) Formals -> Type Var . COMMA Formals
    (34) Formals -> Type Var .

    COMMA           shift and go to state 94
    RPAREN          reduce using rule 34 (Formals -> Type Var .)


state 47

    (19) MemberDecl -> FunDecl .

    INT             reduce using rule 19 (MemberDecl -> FunDecl .)
    BOOL            reduce using rule 19 (MemberDecl -> FunDecl .)
    VOID            reduce using rule 19 (MemberDecl -> FunDecl .)
    animal          reduce using rule 19 (MemberDecl -> FunDecl .)
    dog             reduce using rule 19 (MemberDecl -> FunDecl .)
    RCURLY          reduce using rule 19 (MemberDecl -> FunDecl .)


state 48

    (17) MemberDeclstar -> MemberDecl . MemberDeclstar
    (16) MemberDeclstar -> . empty
    (17) MemberDeclstar -> . MemberDecl MemberDeclstar
    (4) empty -> .
    (18) MemberDecl -> . VarDecl
    (19) MemberDecl -> . FunDecl
    (8) VarDecl -> . Type VarList SEMICOLON
    (9) FunDecl -> . Type Var LPAREN FormalsQ RPAREN Stmt
    (24) Type -> . INT
    (25) Type -> . BOOL
    (26) Type -> . VOID
    (27) Type -> . Type LSQR RSQR
    (28) Type -> . animal
    (29) Type -> . dog

    RCURLY          reduce using rule 4 (empty -> .)
    INT             shift and go to state 13
    BOOL            shift and go to state 6
    VOID            shift and go to state 1
    animal          shift and go to state 5
    dog             shift and go to state 12

    FunDecl                        shift and go to state 47
    VarDecl                        shift and go to state 51
    MemberDecl                     shift and go to state 48
